# probing

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.cn.md  README.md  build.rs  build.sh  job_tracker.py  make_wheel.py  pyproject.toml  pytest.ini  专利_大模型训练集群训练效能指标实时采集与组织管理方法.md
app/: Cargo.toml  Trunk.toml  index.html
app/src/: app.rs  error_template.rs  errors.rs  main.rs  url_read.rs
app/src/components/: card_view.rs  dataframe_view.rs  error_display.rs  header_bar.rs  mod.rs  page_layerout.rs  panel.css  panel.rs  tableview.rs
app/src/pages/: activity.rs  cluster.rs  common.rs  debug.rs  files.rs  mod.rs  overview.rs  profiler.rs  python.rs  timeseries.rs  welcome.rs
app/src/pages/python/: module.rs  object.rs  tensor.rs
app/style/: main.scss
app/style/leptonic/components/: app-bar.scss  table.scss
app/style/leptonic/themes/: light.scss
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  table.rs
cli/src/cli/: catch.rs  commands.rs  console.rs  ctrl.rs  debug.rs  dump.rs  execute.rs  inject.rs  listen.rs  misc.rs  mod.rs  panel.rs  pause.rs  perf.rs  performance.rs  pprof.rs  repl.rs
cli/src/cli/console/: activity_tab.rs  app_style.rs  inspect_tab.rs  process_tab.rs  read_info.rs  utils.rs
cli/src/cli/panel/: activity_tab.rs  app_style.rs  inspect_tab.rs  process_tab.rs  read_info.rs
cli/src/inject/: libc_addresses.rs  mod.rs  process.rs
common/: Cargo.toml
common/src/: cli.rs  lib.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/core/: engine.rs  mod.rs  table_plugin.rs
engine/src/plugins/: env.rs  env2.rs  envs.rs  files.rs  kmsg.rs  mod.rs
html_render/: Cargo.toml
html_render/src/: lib.rs
ppp/: Cargo.toml
ppp/src/: cli.rs  trace.rs
probing/cc/: Cargo.toml
probing/cc/src/: ccprobe.rs  lib.rs
probing/cc/src/plugins/: mod.rs
probing/cli/: Cargo.toml  build.rs
probing/cli/src/: lib.rs  main.rs  table.rs
probing/cli/src/cli/: commands.rs  ctrl.rs  draw.rs  fetch.rs  inject.rs  mod.rs  process_monitor.rs  ptree.rs  repl.rs  store.rs
probing/cli/src/inject/: README.md  README_AARCH64.md  injection.rs  injection_aarch64.rs  injection_trait.rs  libc_addresses.rs  mod.rs  process.rs
probing/cli/tests/: test_aarch64.rs
probing/core/: Cargo.toml
probing/core/src/: ccprobe.rs  config.rs  lib.rs  tracing.rs
probing/core/src/core/: cluster.rs  cluster_model.rs  engine.rs  error.rs  extension.rs  mod.rs  plugin.rs  table_plugin.rs
probing/core/src/plugins/: cluster.rs  envs.rs  file.rs  files.rs  mod.rs
probing/core/src/storage/: addressing.rs  distributed.rs  entity.rs  mem_store.rs  mod.rs  remote_client.rs  topology.rs
probing/core/src/store/: mod.rs  tcpstore.rs
probing/core/src/trace/: mod.rs  span.rs
probing/core/tests/: distributed_storage_integration.rs
probing/crates/store/: Cargo.toml
probing/crates/store/src/store/: mod.rs  tcpstore.rs
probing/dpp/: Cargo.toml
probing/dpp/src/: cli.rs  lib.rs
probing/dpp/src/protocol/: cluster.rs  dataframe.rs  mod.rs  query.rs
probing/engine/: Cargo.toml
probing/engine/src/: lib.rs
probing/engine/src/core/: chunked_encode.rs  engine.rs  error.rs  extension.rs  mod.rs  table_plugin.rs
probing/engine/src/plugins/: cluster.rs  file.rs  files.rs  kmsg.rs  mod.rs
probing/engine/src/plugins/cluster/: service.rs
probing/extensions/cc/: Cargo.toml
probing/extensions/cc/src/: ccprobe.rs  lib.rs
probing/extensions/cc/src/extensions/: cluster.rs  envs.rs  files.rs  kmsg.rs  mod.rs  rdma.rs  taskstats.rs
probing/extensions/cc/src/plugins/: cluster.rs  envs.rs  files.rs  kmsg.rs  mod.rs
probing/extensions/python/: Cargo.toml
probing/extensions/python/src/: extensions.rs  flamegraph.rs  lib.rs  pprof.rs  python.rs  python_stack.rs  setup.rs
probing/extensions/python/src/extensions/: pprof.rs  python.rs  rdma.rs  taskstats.rs  torch.rs
probing/extensions/python/src/features/: mod.rs  pprof.rs  python_api.rs  stack_tracer.rs  (+2 more)
probing/legacy/: Cargo.toml
probing/legacy/src/: ctrl.rs  hooks.rs  lib.rs
probing/legacy/src/core/: mod.rs  pltffi.rs  trace.rs
probing/legacy/src/ctrl/: backtrace.rs  disable.rs  enable.rs  show.rs  trace.rs
probing/legacy/src/handlers/: dump_stack.rs  execute_handler.rs  mod.rs  pprof_handler.rs
probing/legacy/src/repl/: console.rs  debug_console.py  mod.rs  python_repl.rs
probing/legacy/src/server/: debug_server.rs  local_server.rs  mod.rs  report.rs
probing/legacy/src/service/: asset.rs  mod.rs  process.rs  profiler.rs  python.rs
probing/macros/: Cargo.toml
probing/macros/src/: lib.rs
probing/macros/tests/: test_macros.rs
probing/proto/: Cargo.toml
probing/proto/benches/: bench_series.rs
probing/proto/examples/: time_series.rs
probing/proto/src/: cli.rs  lib.rs
probing/proto/src/protocol/: cluster.rs  dataframe.rs  message.rs  mod.rs  probe.rs  process.rs  query.rs  version.rs
probing/proto/src/types/: array.rs  basic.rs  compress.rs  dataframe.rs  error.rs  mod.rs  seq.rs  series.rs  table.rs  time_series.rs  timeseries.rs  value.rs
probing/proto/tests/: basic_tests.rs
probing/python/: Cargo.toml
probing/python/src/: catch_crash.rs  extensions.rs  flamegraph.rs  lib.rs  pprof.rs
probing/python/src/extensions/: pprof.rs  python.rs  taskstats.rs  torch.rs
probing/python/src/plugins/: external_tables.rs  mod.rs  python.rs
probing/python/src/pycode/: crash_handler.py  mod.rs  torch_profiling.py
probing/python/src/repl/: console.rs
probing/server/: AUTH.md  Cargo.toml  MIDDLEWARE.md
probing/server/src/: asset.rs  auth.rs  cluster.rs  engine.rs  engine_handler.rs  error.rs  extension_handler.rs  extensions.rs  handler.rs  lib.rs  local_server.rs  profiling.rs  remote_server.rs  report.rs  server.rs  stream_handler.rs  system.rs  vars.rs
probing/server/src/server/: actors.rs  apis.rs  cluster.rs  config.rs  extension_handler.rs  file_api.rs  middleware.rs  mod.rs  profiling.rs  repl.rs  services.rs  system.rs
probing/server/src/server2/: actors.rs  mod.rs  services.rs
ptrace-inject/: Cargo.toml
ptrace-inject/src/: injection.rs  lib.rs  libc_addresses.rs  process.rs
(+175 files in other folders)
