cargo-features = ["codegen-backend"]

[workspace]
members = [
    "app",
    "probing/cli",
    "probing/proto",
    "probing/core",
    "probing/extensions/cc",
    "probing/extensions/python",
    "probing/server",
    
]

[workspace.package]
version = "0.2.0"
authors = ["reiase <reiase@gmail.com>"]
edition = "2021"
license = "GPL3"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "54.2.0", default-features = false, features = ["csv"] }
chrono = "0.4"
log = "0.4"
nix = { version = "0.29.0", default-features = false, features = [
    "ptrace",
    "signal",
    "fs",
    "net",
    "hostname",
    "feature",
    "socket",
    "term",
    "ioctl",
] }
once_cell = "1.19.0"
procfs = { version = "0.17.0", default-features = false, features = ["chrono"] }
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.41.1", default-features = false, features = [
    "net",
    "io-util",
    "rt-multi-thread",
] }
criterion = { version = "0.5", features = ["html_reports"] }

rspec = "1"

[package]
name = "probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance and Stability Diagnostic Tool for AI Applications"
readme = "README.md"
repository = "https://github.com/reiase/probing"
homepage = "https://github.com/reiase/probing"
keywords = ["debug", "performance", "python"]

[lib]
crate-type = ["cdylib"]

[dependencies]
probing-proto = { path = "probing/proto" }
probing-core = { path = "probing/core" }
probing-server = { path = "probing/server" }
probing-python = { path = "probing/extensions/python" }
probing-macros = { path = "probing/macros" }

anyhow = { workspace = true }
log = { workspace = true }
ron = { workspace = true }
ctor = { version = "0.3.6", features = [] }
env_logger = { version = "0.11.6", default-features = false, features = [
    "humantime",
    "auto-color",
] }
nix = { workspace = true }

[dev-dependencies]
# probing-cli = { path = "probing/cli" }

anyhow = { workspace = true }
arrow = { workspace = true }
pyo3 = { version = "0.23.5", features = [
    "abi3",
    "abi3-py37",
    "auto-initialize",
] }
tokio = { workspace = true }

[profile.release]
opt-level = "z"   # Optimize for size.
panic = "unwind"
strip = true      # Automatically strip symbols from the binary.
lto = "thin"
codegen-units = 1
