cargo-features = ["codegen-backend"]

[workspace]
members = [
    # "app",
    "probing/cli",
    "probing/proto",
    "probing/core",
    "probing/extensions/cc",
    "probing/extensions/python",
    "probing/server",
    "probing/crates/store",
]

[workspace.package]
version = "0.2.0"
authors = ["reiase <reiase@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "Performance and Stability Diagnostic Tool for AI Applications"

[workspace.dependencies]
anyhow = "1.0"
arrow = { version = "55.1.0", default-features = false, features = ["csv"] }
chrono = "0.4"
log = "0.4"
nix = { version = "0.30.1", default-features = false, features = [
    "ptrace",
    "signal",
    "fs",
    "net",
    "feature",
    # "socket",
    "term",
    "ioctl",
] }
once_cell = "1.21.3"
procfs = { version = "0.17.0", default-features = false, features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45.0", default-features = false, features = [
    "net",
    "io-util",
    "rt-multi-thread",
] }
criterion = { version = "0.6.0", features = ["html_reports"] }

[package]
name = "probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme = "README.md"
repository = "https://github.com/reiase/probing"
homepage = "https://github.com/reiase/probing"
keywords = ["debug", "performance", "python"]

[lib]
crate-type = ["cdylib"]

[dependencies]
probing-core = { path = "probing/core" }
probing-server = { path = "probing/server" }
probing-python = { path = "probing/extensions/python" }

anyhow = { workspace = true }
log = { workspace = true }
ctor = { version = "0.4.1", features = [] }
env_logger = { version = "0.11.6", default-features = false, features = [
    "humantime",
] }
nix = { workspace = true }

[dev-dependencies]
# probing-cli = { path = "probing/cli" }

anyhow = { workspace = true }
arrow = { workspace = true }
pyo3 = { version = "0.25.0", default-features = false, features = [
    "abi3",
    "abi3-py37",
    "auto-initialize",
    "macros"
] }
tokio = { workspace = true }

[profile.release]
opt-level = "z"   # Optimize for size.
panic = "unwind"
strip = true      # Automatically strip symbols from the binary.
lto = "thin"
codegen-units = 16
incremental = true

[profile.dev]
incremental = true
debug = 1  # 设置为较小的调试信息，而不是完整信息
