[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "probe"
version = "0.1.0"
authors = [{ name = "Reiase", email = "reiase@gmail.com" }]
description = ""
requires-python = ">=3.7"
readme = "README.md"
license = { text = "Apache License Version 2.0" }

[tool.maturin]
include = ["probe-0.1.0.data/scripts/*"]
compatibility = "linux"
skip-auditwheel = false

[tool.black]
line-length = 88

[tool.flake8]
extend-ignore = ["E203", "E501"]
max-line-length = 88
count = true

[tool.isort]
atomic = true
profile = "black"
line_length = 88

[tool.coverage.run]
branch = true
source = ["probe"]
