[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

console_error_panic_hook = "0.1.7"
thaw = { version="=0.4.0-beta5", features=["csr"]}
thiserror = "1.0.56"
icondata = { version = "0.4.0", default-features = false, features = [
    "ant-design-icons",
    "box-icons",
    "lucide",
] }
console_log = "1"

[dependencies.gloo-net]
version = "0.6.0"
features = ["http"]

[dependencies.leptos]
version = "0.7.0"
features = ["csr"]

[dependencies.leptos_meta]
version = "0.7.0"
# features = ["csr"]
default-features = false

[dependencies.leptos_router]
version = "0.7.0"
# features = ["csr"]

[dependencies.probing-dpp]
path = "../probing/dpp"
features = []

[features]
debug = []

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
strip = true

[profile.release.package]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
