[package]
name = "app"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

console_error_panic_hook = "0.1.7"
thaw = { version = "0.4.6", features = ["csr"] }
thiserror = "2"
icondata = { version = "0.5.0", default-features = false, features = [
    "ant-design-icons", "css-gg", "simple-icons"
] }
console_log = "1"
leptos = { version = "0.7.8", default-features = false, features = ["csr"] }
leptos_meta = { version = "0.7.8", default-features = false }
leptos_router = { version = "0.7.8", default-features = false }
leptos-chartistry = "0.2.1"
web-sys = "0.3.77"

[dependencies.gloo-net]
version = "0.6.0"
features = ["http"]

[dependencies.probing-proto]
path = "../probing/proto"
default-features = false
features = []

[profile.release]
opt-level = "z"
debug = false
strip = true
