[package]
name = "probe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "probe"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29.0", default-features = false, features = [
    "ptrace",
    "signal",
] }
anyhow = "1.0.86"
probe-common = { path = "../common" }
ron = "0.8.1"
eyre = "0.6"
libloading = "0.8.3"
log = "0.4"
pete = "0.12.0"
procfs = { version = "0.16.0", default-features = false, features = [] }
clap = { version = "4.5.7", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
