[package]
name = "probing-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "probing"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29.0", default-features = false, features = [
    "ptrace",
    "signal",
] }
anyhow = "1.0.86"
probing-common = { path = "../common" }
ron = "0.8.1"
eyre = "0.6"
http-body-util = { version = "0.1" }
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
hyperparameter = { version = "0.5.11", default-features = false }
libloading = "0.8.3"
log = "0.4"
pete = "0.12.0"
procfs = { version = "0.16.0", default-features = false, features = [] }
clap = { version = "4.5.7", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
ratatui = "0.27.0"
strum = "0.26.3"
tui-tree-widget = "0.21.0"
serde_json = "1.0.117"
once_cell = "1.19.0"
nu-ansi-term = "0.50.0"

[dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["net", "io-util", "rt-multi-thread"]
