[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "probing"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap_complete = { version = "4.5.11", features = ["unstable-dynamic"] }
eyre = "0.6"
http-body-util = { version = "0.1" }
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
hyperparameter = { version = "0.5.12", default-features = false }
libloading = "0.8.3"
log = "0.4"
once_cell = "1.19.0"
pete = "0.12.0"
ppp = { path = "../ppp" }
procfs = { version = "0.16.0", default-features = false, features = [] }
ratatui = "0.27.0"
ron = "0.8.1"
rustyline = { version = "14.0.0", default-features = false }
serde_json = "1.0.117"
shlex = "1.3.0"
strum = "0.26.3"
tui-tree-widget = "0.21.0"

[dependencies.clap]
version = "4.5.11"
default-features = false
features = [
    "derive",
    "std",
    "help",
    "usage",
]

[dependencies.nix]
version = "0.29.0"
default-features = false
features = [
    "ptrace",
    "signal",
]

[dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["net", "io-util", "rt-multi-thread"]
