[package]
name = "probe-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
leptos = ["dep:leptos", "dep:leptos-struct-table"]

[dependencies]
leptos = { version = "0.6.5", features = ["csr"], optional = true }
leptos-struct-table = { version = "0.10.2", optional = true }
serde = { version = "1", features = ["derive"] }
