[package]
name = "ppp"
description = "Portable Probing Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.11", default_features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
