[package]
name = "ptrace-inject"
version = "0.1.2"
edition = "2021"
authors = ["Artemis Vellacott <me@arty.li>"]
license = "MIT OR Apache-2.0"
description = "Shared library injection for *nix using ptrace."
repository = "https://github.com/Artemis21/ptrace-inject"
documentation = "https://docs.rs/ptrace-inject"
readme = "README.md"
keywords = ["dll-injection", "unix", "linux", "library", "command-line"]

[dependencies]
eyre = "0.6"
libloading = "0.8.3"
log = "0.4"
nix = { version = "0.26", default-features = false, features = ["ptrace"] }
pete = "0.12.0"
procfs = { version = "0.16.0", default-features = false, features = [] }
