[package]
name = "probing-cc"
description = "C/C++ support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probing-proto = { path = "../proto" }
probing-engine = { path = "../engine" }

log = { workspace = true }
once_cell = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

anyhow = { workspace = true }
backtrace = { version = "0.3", features = ["cpp_demangle", "std"] }
linux-taskstats = "0.7.0"
