[package]
name = "probing-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "probing"
path = "src/main.rs"

[dependencies]
probing-proto = { path = "../proto", default-features = false, features = [] }
probing-store = { path = "../crates/store", default-features = false, features = [
] }


anyhow = { workspace = true }
log = { workspace = true }
procfs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "time",
] }
nix = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12.4", features = ["json"] }

env_logger = { version = "0.11.3", default-features = false, features = [
    "humantime",
] }
http-body-util = { version = "0.1" }
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
libloading = "0.8.3"
pete = "0.12.0"
tabled = { version = "0.17.0", default-features = false, features = ["macros"] }

[dependencies.clap]
version = "4.5.38"
features = ["derive", "env", "unicode", "unstable-markdown"]
