[package]
name = "probing-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "probing"
path = "src/main.rs"

[dependencies]
probing-proto = { path = "../proto", default-features = false, features = [] }
probing-store = { path = "../crates/store", default-features = false, features = [
] }

anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
nix = { workspace = true }

env_logger = { workspace = true }
once_cell = { version = "1.21.3" }
http-body-util = { version = "0.1" }
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
libloading = "0.8.3"
tabled = { version = "0.20.0", default-features = false, features = ["macros"] }
libc = "0.2.176"

[dependencies.clap]
version = "4.5.38"
features = ["derive", "env", "unicode", "unstable-markdown"]

[target.'cfg(target_os = "linux")'.dependencies]
pete = "0.12.0"
procfs = { version = "0.17.0", default-features = false, features = ["chrono"] }

[build-dependencies]
vergen = { version = "9.0.0", features = ["build", "cargo", "rustc"] }
