[package]
name = "probing-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
probing-proto = { path = "../proto" }
probing-macros = { path = "../macros" }

anyhow = { workspace = true }
arrow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
datafusion = { version = "45.0.0", default-features = false, features = [] }
futures = "0.3.31"

[dev-dependencies]
rspec = { workspace = true }
