[package]
name = "probing-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the Probing framework, providing essential data analysis and inspection capabilities"

[lib]
crate-type = ["rlib"]

[dependencies]
probing-proto = { path = "../proto" }
probing-macros = { path = "../macros" }

anyhow = { workspace = true }
arrow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
datafusion = { version = "47.0.0", default-features = false, features = [] }
futures = "0.3.31"
