[package]
name = "probing-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the Probing framework, providing essential data analysis and inspection capabilities"

[lib]
crate-type = ["rlib"]

[dependencies]
probing-proto = { path = "../proto" }
probing-macros = { path = "../macros" }

anyhow = { workspace = true }
arrow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
datafusion = { version = "47.0.0", default-features = false, features = [] }
futures = "0.3.31"
sled = "0.34.7"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
