[package]
name = "probing-dpp"
description = "Distributed Probe Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
clap = { version = "4.5.11", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
] }
