[package]
name = "probing-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
probing-proto = { path = "../proto" }

anyhow = { workspace = true }
arrow = { workspace = true, default-features=false, features = ["csv"]}
procfs = { workspace = true }
serde = {workspace = true }
serde_json = { workspace = true }

async-trait = "0.1.83"
datafusion = {version = "42.2.0", default-features = false, features = []}
futures = "0.3.31"
rmesg = "1.0.21"
ron = "0.8.1"
