[package]
name = "probing-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
kmsg = ["dep:rmesg"]

[dependencies]
probing-proto = { path = "../proto" }
probing-macros = { path = "../macros" }

anyhow = { workspace = true }
arrow = { workspace = true, default-features=false}
log = { workspace = true }
once_cell = { workspace = true }
procfs = { workspace = true }
serde = {workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
datafusion = {version = "44.0.0", default-features = false, features = []}
futures = "0.3.31"
rmesg = { version = "1.0.21", optional = true }
ron = "0.8.1"

[dev-dependencies]
rspec = { workspace = true }