[package]
name = "probing-legacy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Performance and Stability Diagnostic Tool for AI Applications"
readme = "README.md"
repository = "https://github.com/reiase/probing"
homepage = "https://github.com/reiase/probing"
keywords = ["debug", "performance", "python"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
probing-proto = { path = "../proto" }
probing-engine = { path = "../engine" }
probing-python = { path = "../python" }
probing-server = { path = "../server" }

anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
procfs = { workspace = true }
ron = { workspace = true }
serde_json = { workspace = true }

backtrace = { version = "0.3.69", features = ["cpp_demangle", "std"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.5.1", features = ["server", "http1"] }
include_dir = "=0.7.4"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
plt-rs = "0.2.0"
pprof = { version = "0.14.0", features = ["cpp", "flamegraph"] }
pyo3 = { version = "0.23.3", features = [
    "abi3",
    "abi3-py37",
    "auto-initialize",
] }
qstring = "0.7.2"
signal-hook-registry = "1.4.2"
rustnix = "0.0.1"

[build-dependencies]
pyo3-build-config = "0.23.3"

[dev-dependencies]
arrow = { workspace = true, default-features = false, features = ["csv"] }

[profile.release]
opt-level = "z"   # Optimize for size.
panic = "unwind"
strip = true      # Automatically strip symbols from the binary.
lto = "fat"
codegen-units = 1
