[package]
name = "probing-proto"
description = "Distributed Probe Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["actor"]
actor = ["dep:actix"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
minstant = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

pco = "0.4.1"
actix = { version = "0.13", optional=true }

[dev-dependencies]
arrow = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
serde_json = { workspace = true }

[[bench]]
name = "bench_series"
harness = false
