[package]
name = "probing-proto"
description = "Distributed Probe Protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

pco = "0.4.1"

[dev-dependencies]
arrow = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
serde_json = { workspace = true }

[[bench]]
name = "bench_series"
harness = false
