[package]
name = "probing-python"
description = "Python support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probing-engine = { path = "../engine" }
probing-proto = { path = "../proto" }

anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

include_dir = "=0.7.4"
pyo3 = { version = "0.23.2", features = [
    "abi3",
    "abi3-py37",
    "auto-initialize",
] }
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
inferno = "0.12.1"

[dev-dependencies]
rspec = "1"
tokio = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.23.2"
