[package]
name = "probing-python"
description = "Python support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probing-cc = { path = "../cc" }
probing-engine = { path = "../engine" }
probing-proto = { path = "../proto" }

anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rustix = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

include_dir = "=0.7.4"
pyo3 = { version = "0.23.4", features = [
    "abi3",
    "abi3-py37",
    "auto-initialize",
] }
inferno = "0.12.1"
pprof = { version = "0.14.0", features = ["cpp", "flamegraph"] }

[dev-dependencies]
rspec = "1"
tokio = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.23.2"
