[package]
name = "probing-server"
description = "Probing Server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probing-cc = { path = "../cc" }
probing-proto = { path = "../proto" }
probing-python = { path = "../python" }
probing-engine = { path = "../engine" }

anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rustix = { workspace = true }
procfs = { workspace = true }

bytes = "1"
include_dir = "=0.7.4"
nu-ansi-term = "0.50.1"
ureq = { version = "3.0.2", default-features = false, features = ["json"] }
axum = { version = "0.8.1", default-features = false, features = [
    "tokio",
    "http1",
    "query",
    "json",
    "tower-log",
] }
