[package]
name = "probing-cc"
description = "C/C++ support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["kmsg"]
kmsg = ["dep:rmesg"]

[dependencies]
probing-proto = { path = "../../proto" }
probing-core = { path = "../../core" }

anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
procfs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
backtrace = { version = "0.3", features = ["cpp_demangle", "std"] }
rmesg = { version = "1.0.21", optional = true }
datafusion = { version = "47.0.0", default-features = false, features = [] }
