[package]
name = "probing-cc"
description = "C/C++ support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["kmsg", "taskstats"]
kmsg = ["dep:rmesg"]
taskstats = []

[dependencies]
probing-proto = { path = "../../proto" }
probing-core = { path = "../../core" }

anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

async-trait = "0.1.83"
rmesg = { version = "1.0.21", optional = true }
datafusion = { version = "47.0.0", default-features = false, features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17.0", default-features = false, features = ["chrono"] }
